# comp-170-su26

./: 2026-06-23-COMP170.md  2026-06-29-COMP170.md  2026-07-14-COMP170.md  CLAUDE.md  banana.py  homework_design.md  if.py  multi.py  quad.py
tools/: vim_tutorial.md
week02/: 2026-05-26-COMP170.md  2026-05-27-COMP170.md  interest.py  interest_pro.py
week03/: 2026-06-01-COMP170.md  ascii.py  demo_scope.py  shopping.md  week03-assignment.md  week03_solutions.py
week04/: 2026-06-10-COMP170.md  airline.py  claude_demo.md  seat_arrangements.py  temperatures.py  week04-assignment.md
week05/: 2026-06-15-COMP170.md  2026-06-16-COMP170.md  2026-06-17-COMP170.md  fun_with_words.py  managing_complexity.py  play_with_words.py  that_other_program.py  week04-solutions.py  week05-assignment.md  week05-solutions.py
week06/: 2026-06-22-COMP170.md  2026-06-24-COMP170.md  cumulative.py  fact.py  parse_brute_force.py  week06-assignment.md  week06-solutions.md
week07/: 2026-06-30-COMP170.md  2026-07-01-COMP170.md  demo_contains.py  find.py  infi.py  occurrences.py  week07-assignment.md  week07-solutions.md
week08/: 2026-07-06-COMP170.md  2026-07-07-COMP170.md  2026-07-08-COMP170.md  gpa.py  mathemagics.py  quadratic_flow_chart.drawio  test-math.py  test_math_naive.py  test_math_plain.py  week08-assignment.md  week08-solutions.py
week08/mathemagics-package/: README.md  pyproject.toml
week08/mathemagics-package/src/mathemagics/: __init__.py
week09/: 2026-07-13-COMP170.md  2026-07-15-COMP170.md  age.py  atm.py  banana.py  multi.py  sum.py  week09-assignment.md  (+1 more)
(+7 files in other folders)
